# splitbot

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE.txt  README.md  SECURITY.md
src/: account.rs  app.rs  config.rs  events.rs  main.rs  persist.rs
src/splitnow/: client.rs  data.rs  mod.rs
src/ui/: account.rs  components.rs  home.rs  mod.rs  multiswap.rs  status.rs  swap.rs  unlock.rs  wallets.rs
src/vault/: crypto.rs  mod.rs  model.rs
src/wallet/: bitcoin.rs  evm.rs  mod.rs  monero.rs  solana.rs
