[package]
name = "splitbot"
version = "0.1.0"
edition = "2024"
description = "A terminal interface for SplitNOW swaps and local hot-wallet management."
readme = "README.md"
keywords = ["tui", "crypto", "wallet", "splitnow", "swap"]
categories = ["command-line-utilities"]

[dependencies]
aes-gcm = "0.10.3"
alloy-primitives = { version = "1.5.7", features = ["k256"] }
anyhow = "1.0.102"
argon2 = "0.5.3"
bitcoin = { version = "0.32.8", features = ["rand-std"] }
bs58 = "0.5.1"
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
directories = "6.0.0"
futures = "0.3.32"
hex = "0.4.3"
k256 = { version = "0.13.4", features = ["ecdsa"] }
monero = "0.21.0"
rand = "0.10.1"
rand_core = { version = "0.6.4", features = ["getrandom"] }
ratatui = "0.30.0"
reqwest = { version = "0.12.28", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
solana-keypair = "3.1.2"
solana-signer = "3.0.0"
splitnow = "1.0.0"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = "0.3.23"
tui-input = "0.15.3"
zeroize = { version = "1.8.2", features = ["derive"] }
